Give me a break, it's 2am.  But it works now.

--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -16,7 +16,7 @@ deprecation_warnings            = TRUE
 display_skipped_hosts           = TRUE
 error_on_undefined_vars         = TRUE
 filter_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/filter_plugins
-forks                           = 50
+forks                           = 10
 gathering                       = smart
 inventory                       = hosts
 log_path                        = /home/khuntly/.log/ansible
@@ -39,7 +39,7 @@ become_user                     = root
 become_ask_pass                 = FALSE
 
 [ssh_connection]
-ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
+#ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
 control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
 scp_if_ssh                      = FALSE
 
