--- a/distributeProfile/roles/installProfile/tasks/bastion.yml
+++ b/distributeProfile/roles/installProfile/tasks/bastion.yml
@@ -19,7 +19,11 @@
     path=/home/khuntly/.ssh/known_hosts
     state=absent
 
-- name: update esol-core service config
+- name: Generate list of hosts for SSH configuration
+  shell: "/usr/sbin/mco find -W fqdn='/^(md|ss|mx|smtp|pop|ecmgr|smtpclt|mxclt|sa|etools|egraphs|spam)\d\d.*|ldap01-[a-d].*/' | sort -n | sed -e 's/.synacor.com//g'"
+  register: hostlist
+
+- name: Copy template ssh config
   template:
     src=ssh/config.j2
     dest="{{ remote_home }}/.ssh/config"
@@ -27,3 +31,8 @@
     group="{{ remote_group }}"
     mode=0644
 
+- name: Set up known_hosts file
+  shell: "ssh-keyscan -t {{ item.1 }} {{ item.0 }} >> /home/khuntly/.ssh/known_hosts"
+  with_together:
+    - hostlist
+    - keytypes
