--- a/build-dns/ansible.cfg
+++ b/build-dns/ansible.cfg
@@ -3,24 +3,18 @@
 #   DESCRIPTION:  Configuration file for this ansible playbook
 #==============================================================================
 [defaults]
-ansible_python_interpreter      = /usr/bin/python2.6
-action_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/action_plugins
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
 ask_pass                        = TRUE
 bin_ansible_callbacks           = TRUE
-callback_plugins                = /usr/lib/python2.7/site-packages/ansible/runner/callback_plugins
 command_warnings                = TRUE
-connection_plugins              = /usr/lib/python2.7/site-packages/ansible/runner/connection_plugins
 deprecation_warnings            = TRUE
 display_skipped_hosts           = TRUE
 error_on_undefined_vars         = TRUE
-filter_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/filter_plugins
 forks                           = 10
 gathering                       = smart
 inventory                       = hosts
 log_path                        = /home/khuntly/.log/ansible
-lookup_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/lookup_plugins
 module_lang                     = C
 module_name                     = shell
 pattern                         = *
@@ -28,8 +22,8 @@ poll_interval                   = 15
 remote_user                     = tdpokh2
 system_warnings                 = TRUE
 timeout                         = 30
-vars_plugins                    = /usr/lib/python2.7/site-packages/ansible/runner/vars_plugins
 fact_caching                    = redis
+fact_caching_connection         = localhost:6379:0
 vault_password_file             = /home/khuntly/.etc/vault.txt
 
 [privilege_escalation]
