--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -18,11 +18,11 @@ module_lang                     = C
 module_name                     = shell
 pattern                         = *
 poll_interval                   = 15
-remote_user                     = khuntly
+remote_user                     = kmhuntly
 system_warnings                 = TRUE
 timeout                         = 30
-fact_caching                    = redis
-fact_caching_connection         = localhost:6379:0
+fact_caching                    = jsonfile
+fact_caching_connection         = jsonfacts
 #vault_password_file             = /home/khuntly/.etc/ansible/vault.txt
 
 [privilege_escalation]
@@ -41,3 +41,4 @@ accelerate_timeout              = 30
 accelerate_connect_timeout      = 1.0
 accelerate_daemon_timeout       = 30
 accelerate_multi_key            = yes
+
