--- a/build-dns/ansible.cfg
+++ b/build-dns/ansible.cfg
@@ -5,7 +5,7 @@
 [defaults]
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
-ask_pass                        = TRUE
+ask_pass                        = FALSE ## this assumes everything is keyed (and it should be tbh)
 bin_ansible_callbacks           = TRUE
 command_warnings                = TRUE
 deprecation_warnings            = TRUE
@@ -19,12 +19,12 @@ module_lang                     = C
 module_name                     = shell
 pattern                         = *
 poll_interval                   = 15
-remote_user                     = tdpokh2
+remote_user                     = kmhuntly
 system_warnings                 = TRUE
 timeout                         = 30
-fact_caching                    = redis
-fact_caching_connection         = localhost:6379:0
-vault_password_file             = /home/khuntly/.etc/vault.txt
+fact_caching                    = jsonfile
+fact_caching_connection         = jsonfacts
+#vault_password_file             = /home/khuntly/.etc/vault.txt
 
 [privilege_escalation]
 become                          = FALSE
@@ -33,8 +33,6 @@ become_user                     = root
 become_ask_pass                 = FALSE
 
 [ssh_connection]
-#ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
-control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
 scp_if_ssh                      = FALSE
 
 [accelerate]
