--- a/build-dns/group_vars/all/main.yml
+++ b/build-dns/group_vars/all/main.yml
@@ -1,41 +1,5 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  group_vars/all
+#          NAME:  group_vars/all/main.yml
 #   DESCRIPTION:  Common variables that apply to this play
 #==============================================================================
-##
-## local vars
-##
-username: khuntly
-
-##
-## where do we get installers from?
-##
-named_installer: https://www.isc.org/downloads/file/bind-9-10-3/?version=tar-gz
-openssl_installer: https://www.openssl.org/source/openssl-1.0.2d.tar.gz
-bind_keys: http://ftp.isc.org/isc/bind9/keys/9.8/bind.keys.v9_8
-
-##
-## chroot
-##
-chroot_dir: /var/named
-chroot_dirs:
-  - dev
-  - usr
-  - usr/lib
-  - usr/bin
-  - usr/local
-  - usr/local/bin
-  - var
-  - var/log
-  - var/run
-  - var/run/bind
-  - var/run/bind/run
-  - var/cache
-  - var/cache/bind
-  - etc
-  - etc/conf.d
-  - etc/dnssec-keys
-  - namedb
-  - namedb/dynamic
-  - namedb/master
-  - namedb/slave
+---
