--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -6,7 +6,6 @@
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
 bin_ansible_callbacks           = TRUE
-command_warnings                = TRUE
 deprecation_warnings            = TRUE
 display_skipped_hosts           = TRUE
 error_on_undefined_vars         = TRUE
@@ -18,18 +17,11 @@ module_lang                     = C
 module_name                     = shell
 pattern                         = *
 poll_interval                   = 15
-remote_user                     = kmhuntly
+remote_user                     = khuntly
 system_warnings                 = TRUE
 timeout                         = 30
 fact_caching                    = jsonfile
 fact_caching_connection         = jsonfacts
-#vault_password_file             = /home/khuntly/.etc/ansible/vault.txt
-
-[privilege_escalation]
-become                          = FALSE
-become_method                   = sudo
-become_user                     = root
-become_ask_pass                 = FALSE
 
 [ssh_connection]
 scp_if_ssh                      = FALSE
@@ -40,4 +32,3 @@ accelerate_timeout              = 30
 accelerate_connect_timeout      = 1.0
 accelerate_daemon_timeout       = 30
 accelerate_multi_key            = yes
-
