--- a/distributeProfile/roles/installProfile/handlers/main.yml
+++ b/distributeProfile/roles/installProfile/handlers/main.yml
@@ -1,7 +1,7 @@
 #======  ANSIBLE  ============================================================
 #          NAME:  handlers/main.yml
 #   DESCRIPTION:  Handles installation of dotfiles after sync
-#==============================================================================
+#=============================================================================
 ---
-- name: install
-  command: "{{ remote_home }}/.dotfiles/bin/install"
+- name: executeInstallation
+  command: "/home/{{ username }}/.dotfiles/bin/installDotFiles -a installFiles"
